Bugfix - Ronnie Medal misaligned - Index

--- a/assets/scss/pages/_homepage.scss
+++ b/assets/scss/pages/_homepage.scss
@@ -1193,7 +1193,7 @@
 			.icon{
 				position: absolute;
 				top: -20px;
-				right: -40px;
+				left: 50%;
 			}
 		}
 		img{
